--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "serve:ssr:configuration": "node dist/configuration/server/server.mjs",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "commit": "cz"
+    "commit": "cz",
+    "prepare": "husky && husky install"
   },
   "private": true,
   "dependencies": {
@@ -48,13 +49,14 @@
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
-    "husky": "^9.0.10",
+    "husky": "^8.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.2.1",
     "typescript": "~5.3.2"
   },
   "config": {
@@ -64,7 +66,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "ng lint"
+      "pre-commit": "npm run lint"
     }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "npm run lint"
+    ]
   }
 }
