--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "serve:ssr:configuration": "node dist/configuration/server/server.mjs",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "commit": "cz",
-    "prepare": "husky && husky install"
+    "commit": "cz"
+
   },
   "private": true,
   "dependencies": {
@@ -50,7 +50,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.56.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -74,7 +74,6 @@
   "lint-staged": {
     "*.{js,ts,html}": [
       "npm run eslint"
-
     ]
   }
 }
